[gd_scene load_steps=5 format=3 uid="uid://bhp4ejewfxw3m"]

[ext_resource type="Script" uid="uid://lebh0ntm7gu6" path="res://Menu/Menu.gd" id="1_42fjs"]
[ext_resource type="Texture2D" uid="uid://dxhifmxgh6njv" path="res://assets/hero/hero-stop.png" id="2_01sa8"]
[ext_resource type="Texture2D" uid="uid://lr33of2c2hs6" path="res://assets/monster/monster.png" id="3_g01as"]
[ext_resource type="Texture2D" uid="uid://dbt6y6slo261v" path="res://assets/map/grass_lush.png" id="4_2ouol"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_42fjs")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -160.0
offset_right = 135.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Меню паузы"
horizontal_alignment = 1
uppercase = true

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0.313726, 0, 0.486275)
theme_override_colors/icon_pressed_color = Color(0, 0.427451, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Продолжить"
icon = ExtResource("2_01sa8")

[node name="RestartButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0.537255, 0, 0, 0.466667)
theme_override_colors/icon_pressed_color = Color(0.49785, 0.000820786, 1.44392e-07, 1)
theme_override_font_sizes/font_size = 20
text = "Начать заново"
icon = ExtResource("3_g01as")

[node name="SaveButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
text = "Сохранить"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
text = "Загрузить"

[node name="FullscreenButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 18
text = "Полноэкранный режим"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0.580392, 0.52549)
theme_override_colors/icon_pressed_color = Color(0, 0, 0.529412, 1)
theme_override_font_sizes/font_size = 20
text = "Выйти из игры"
icon = ExtResource("4_2ouol")

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="VBoxContainer/FullscreenButton" to="." method="_on_check_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
